# cmake-experiments

./: .gitignore  CMakeLists.txt  HelloWorldConfig.h.in  README.md  configure.sh  install  main.cpp  run.sh
Adder/: CMakeLists.txt  adder.cpp  adder.h
